# Notes-System

./: README.md
auth-api/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
auth-api/migrations/2023-10-15-194315_create_auth_users/: up.sql
auth-api/src/: main.rs
auth-api/src/db/: mod.rs
auth-api/src/models/: claims.rs  mod.rs  request.rs  schema.rs  user.rs
auth-api/src/util/: login.rs  signup.rs
client/: bun.lockb
notes-api/: README.md  bun.lockb  drizzle.config.ts  package.json  tsconfig.json
notes-api/drizzle/: 0000_sleepy_terror.sql
notes-api/drizzle/meta/: 0000_snapshot.json  _journal.json
notes-api/src/: index.ts
notes-api/src/db/: index.ts
notes-api/src/db/schema/: index.ts  notes.ts
notes-api/src/notes/controllers/: index.ts  new_note.ts  view_note.ts  view_notes.ts
notes-api/src/notes/routes/: index.ts  new_note.ts  view_note.ts  view_notes.ts
notes-api/src/routes/: notes.ts
notes-api/src/util/: get_user.ts  is_authenticated.ts
todos-api/: .gitignore  Cargo.toml  README.md  requirements.txt
todos-api/src/: __main__.py  app.py  main.py
todos-api/src/db/: __init__.py
user-profile-api/: .env  README.md  go.mod  go.sum  main.go
user-profile-api/config/: config.go
user-profile-api/database/: database.go
user-profile-api/handler/: handler.go
user-profile-api/model/: user.go
user-profile-api/router/: route.go
