[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
derive = "1.0.0"
diesel = { version = "2.1.3", features = ["mysql", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
mysql = "24.0.0"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
sha2 = "0.10.8"
uuid = { version = "1.4.1", features = ["v4"] }
